--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
+	"dev_md": "next-remote-watch projects",
     "build": "next build && next export",
     "start": "next start"
   },
@@ -15,5 +16,8 @@
     "react-dom": "^17.0.2",
     "remark": "^13.0.0",
     "remark-html": "^13.0.1"
+  },
+  "devDependencies": {
+    "next-remote-watch": "^1.0.0"
   }
 }
