--- a/package.json
+++ b/package.json
@@ -4,18 +4,28 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-	"dev_md": "next-remote-watch projects",
+    "dev_md": "next-remote-watch projects",
     "build": "next build && next export",
     "start": "next start"
   },
   "dependencies": {
     "date-fns": "^2.22.1",
     "gray-matter": "^4.0.3",
+    "image-trace-loader": "^1.0.2",
+    "imagemin-gifsicle": "^7.0.0",
+    "imagemin-mozjpeg": "^9.0.0",
+    "imagemin-optipng": "^8.0.0",
+    "imagemin-svgo": "^9.0.0",
+    "jimp": "^0.16.1",
+    "lqip-loader": "^2.2.1",
     "next": "^11.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "remark": "^13.0.0",
-    "remark-html": "^13.0.1"
+    "remark-html": "^13.0.1",
+    "responsive-loader": "^2.3.0",
+    "svg-sprite-loader": "^6.0.8",
+    "webp-loader": "^0.6.0"
   },
   "devDependencies": {
     "next-remote-watch": "^1.0.0"
