--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "jimp": "^0.16.1",
     "lqip-loader": "^2.2.1",
     "next": "^11.0.0",
+    "next-compose-plugins": "^2.2.1",
+    "next-optimized-images": "^2.6.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "remark": "^13.0.0",
